--- a/OsmSharp.Data.SQLServer/OsmSharp.Data.SQLServer.csproj
+++ b/OsmSharp.Data.SQLServer/OsmSharp.Data.SQLServer.csproj
@@ -107,12 +107,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OsmSharp, Version=1.0.2.109, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\OsmSharp.Core.1.0.2\lib\net40\OsmSharp.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\core\Output\OsmSharp.dll</HintPath>
     </Reference>
     <Reference Include="OsmSharp.Osm, Version=1.0.2.109, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\OsmSharp.Core.1.0.2\lib\net40\OsmSharp.Osm.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\core\Output\OsmSharp.Osm.dll</HintPath>
     </Reference>
     <Reference Include="protobuf-net, Version=2.0.0.668, Culture=neutral, PublicKeyToken=257b51d87d2e4d67, processorArchitecture=MSIL">
       <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
@@ -135,23 +135,35 @@
       <Link>Properties\SharedAssemblyVersion.cs</Link>
     </Compile>
     <Compile Include="Extensions.cs" />
-    <Compile Include="Osm\SchemaTools\SQLServerSchemaConstants.cs" />
+    <Compile Include="Osm\SchemaTools\SchemaConstants.cs" />
+    <Compile Include="Osm\Streams\HistoryDbStreamTarget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Osm\SchemaTools\SQLServerSchemaTools.cs" />
-    <Compile Include="Osm\Streams\SQLServerOsmStreamTarget.cs" />
+    <Compile Include="Osm\SchemaTools\SchemaTools.cs" />
+    <Compile Include="Osm\Streams\SnapshotDbStreamTarget.cs" />
     <Compile Include="Osm\TileCalculations.cs" />
-    <Compile Include="Osm\SQLServerDataSource.cs" />
+    <Compile Include="Osm\SnapshotDb.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Osm\SchemaTools\SchemaDDL.sql" />
+    <EmbeddedResource Include="Osm\SchemaTools\SnapshotDbSchemaDDL.sql" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Osm\SchemaTools\SchemaConstraints.sql" />
-    <EmbeddedResource Include="Osm\SchemaTools\SchemaDeleteNonRouting.sql" />
-    <EmbeddedResource Include="Osm\SchemaTools\SchemaDROP.sql" />
+    <EmbeddedResource Include="Osm\SchemaTools\SnapshotDbSchemaConstraints.sql" />
+    <EmbeddedResource Include="Osm\SchemaTools\SnapshotDbSchemaDROP.sql" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Osm\SchemaTools\SnapshotDbDeleteAllData.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Osm\SchemaTools\HistoryDbSchemaDDL.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Osm\SchemaTools\HistoryDbDeleteAllData.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Osm\SchemaTools\HistoryDbSchemaDROP.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
