Finished snapshot and history db imports/exports.

--- a/OsmSharp.Data.SQLServer.Test.Functional/App.config
+++ b/OsmSharp.Data.SQLServer.Test.Functional/App.config
@@ -14,7 +14,7 @@
                 <value>ftp://build.osmsharp.com/data/OSM/planet/europe/belgium-latest.osm.pbf</value>
             </setting>
             <setting name="ConnectionString" serializeAs="String">
-                <value>Server=DESKTOP-K3IOMIF\SQLEXPRESS;Database=osmsharp;User Id=osmsharp;Password=osmsharp;</value>
+                <value>Server=DESKTOP-K3IOMIF\SQLEXPRESS;Database=osmsharp;User Id=osmsharp;Password=osmsharp;MultipleActiveResultSets=true;</value>
             </setting>
         </OsmSharp.Data.SQLServer.Test.Functional.Properties.Settings>
     </userSettings>
