--- a/OsmSharp.Db.SQLServer.Test/OsmSharp.Db.SQLServer.Test.csproj
+++ b/OsmSharp.Db.SQLServer.Test/OsmSharp.Db.SQLServer.Test.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionHelper.cs" />
+    <Compile Include="HistoryDbTests.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -64,6 +65,10 @@
     </Compile>
     <Compile Include="SnapshotDbTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Streams\HistoryDbStreamSourceTests.cs" />
+    <Compile Include="Streams\HistoryDbStreamTargetTests.cs" />
+    <Compile Include="Streams\SnapshotDbStreamSourceTests.cs" />
+    <Compile Include="Streams\SnapshotDbStreamTargetTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
